siril 1.0.0
xx/02/22
* Fixed memory consumption for all sequence operations
* Fixed settings for sequence export as webm film with VP9 codec
* Removed use of lo/hi cursors and fixed normalization for export
* Fixed load and close commands for scripts in GUI
* Fixed Bayer pattern in SER after extraction
* Fixed registration crash for small images
* Improved main panel separator positioning and keeping it in memory
* Improved speed of FITSEQ detection when scanning sequences
* Reintroduced compatibility with OpenCV 4.2 with disabled features

siril 1.0.0~RC2
12/08/21
* Fixes many crashes
* Minor improvements in plot feature
* Restore HD for macOS application

siril 1.0.0~RC1
11/20/21

* New Pixel Math tool
* New plot tool to visualize and sort sequence based on any registration data field available
* New tilt estimation feature (from GUI or command)
* New SNR estimator in photometry analysis
* New button for quick photometry
* New commands seqcosme and seqcosme_cfa to remove deviant pixels on sequence, using file computed with find_hot
* New command boxselect to specify a selection box with x, y, w and h
* Improved candidates star detection speed and accuracy with a new algorithm
* Reviewed GUI and improved responsiveness
* Saving focal and WCS data in the swap file using undo/redo
* WCS data is now updated after geometric transformations (mirror, rotate and crop)
* Seqcrop command can now be used in scripts
* Added autocropping of wide-field images, as well as using a selection for plate solving
* Added choices of degrees of freedom (shift, similitude, affine or homography) for global registration
* Added UI button to plot WCS grid and compass
* Added user catalogue for astrometry annotation
* Added GAIA EDR3 catalogue for astrometry
* Added choice between clipboard and file for snapshot
* Added equalize CFA for X-Trans sensor
* Allowing debayer to be forced for SER files