@@ -52,7 +52,7 @@
     <key>CFBundleExecutable</key>
     <string>siril</string>
     <key>CFBundleGetInfoString</key>
-    <string>%VERSION%, Copyright © 2012-2021 team free-astro</string>
+    <string>%VERSION%, %COPYRIGHT%</string>
     <key>CFBundleIconFile</key>
     <string>siril.icns</string>
     <key>CFBundleIdentifier</key>
@@ -76,6 +76,6 @@
     <key>NSHighResolutionCapable</key>
     <true/>
     <key>NSHumanReadableCopyright</key>
-    <string>Copyright © 2012-2021 team free-astro</string>
+    <string>Copyright © 2012-2022 team free-astro</string>
   </dict>
 </plist>
