@@ -1,4 +1,5 @@
 v1.0.0
+* Added ASTRO-TIFF standard
 * Fixed memory consumption for all sequence operations
 * Fixed settings for sequence export as webm film with VP9 codec
 * Removed use of lo/hi cursors and fixed normalization for export
@@ -7,6 +8,7 @@ v1.0.0
 * Fixed registration crash for small images
 * Improved main panel separator positioning and keeping it in memory
 * Improved speed of FITSEQ detection when scanning sequences
+* Improve usability on MacOS
 * Reintroduced compatibility with OpenCV 4.2 with disabled features
 
 v1.0.0~RC2 December 08, 2021
